put vedio on the website

--- a/website/level2.html
+++ b/website/level2.html
@@ -9,8 +9,37 @@
 
 <body>
     <h1>活力日常</h1>
+    <div style="text-align: center; margin-top: 50px;">
+        <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/DlkD-d-wzQ4?list=PLURmTTCauGCvq-HqaRoyRYjw1lovnodBb&index=40"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+        </iframe>
+    </div>
     <p>做完活力運動可以領取獎勵喔</p>
     <script src="script.js"></script>
 </body>
+
+<style>
+    h1 {
+        font-size: 36px;
+        color: black;
+        margin-bottom: 20px;
+        font-size: 100px;
+        text-align: center;
+    }
+
+    p {
+        font-size: 60px;
+        font-weight: bold;
+        color: #333;
+        margin-top: 20px;
+        text-align: center;
+    }
+</style>
+</head>
+
+
 
 </html>
