--- a/website/level1.html
+++ b/website/level1.html
@@ -13,4 +13,23 @@
     <script src="script.js"></script>
 </body>
 
+<style>
+    h1 {
+        font-size: 36px;
+        color: black;
+        margin-bottom: 20px;
+        font-size: 100px;
+        text-align: center;
+    }
+
+    p {
+        font-size: 60px;
+        font-weight: bold;
+        color: #333;
+        margin-top: 20px;
+        text-align: center;
+    }
+</style>
+</head>
+
 </html>
