--- a/website/level1.html
+++ b/website/level1.html
@@ -5,31 +5,49 @@
     <meta charset="UTF-8">
     <title>舒活晨起</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background-color: #DBE6DB;
+        }
+
+        h1 {
+            font-size: 100px;
+            color: black;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        p {
+            font-size: 60px;
+            font-weight: bold;
+            color: #333;
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        button {
+            display: block;
+            margin: 40px auto;
+            padding: 20px 40px;
+            font-size: 40px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 
 <body>
     <h1>舒活晨起</h1>
     <p>做完活力運動可以領取獎勵喔</p>
+    <button onclick="history.back()">返回上一頁</button>
     <script src="script.js"></script>
 </body>
-
-<style>
-    h1 {
-        font-size: 36px;
-        color: black;
-        margin-bottom: 20px;
-        font-size: 100px;
-        text-align: center;
-    }
-
-    p {
-        font-size: 60px;
-        font-weight: bold;
-        color: #333;
-        margin-top: 20px;
-        text-align: center;
-    }
-</style>
-</head>
 
 </html>
