--- a/website/level3.html
+++ b/website/level3.html
@@ -70,7 +70,15 @@
 
                 // 圖片
                 const img = document.createElement('img');
-                img.src = '5fe0c4c9-fe28-4443-bd7b-9bc16c13a625.png';
+                const imageList = [
+                    'images/level3/example.png',
+                    'images/level3/reward1.jpg',
+                    'images/level3/reward2.jpg',
+                    'images/level3/reward3.jpg'
+                ];
+                const randomIndex = Math.floor(Math.random() * imageList.length);
+                const randomImage = imageList[randomIndex];
+                img.src = randomImage;
                 img.style.maxWidth = '50%';
                 img.style.borderRadius = '10px';
                 img.style.marginBottom = '20px';
